--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.6.1",
-    "ejs": "^3.1.10",
+    "ejs": "^3.0.2",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.1",
     "fuzzball": "^2.1.3",
@@ -22,5 +22,8 @@
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
     "validator": "^13.12.0"
+  },
+  "overrides": {
+  "minimatch": ">=10.2.1"
   }
 }
